// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package taskdefs;

option go_package = "go.chromium.org/luci/buildbucket/appengine/tasks/defs;taskdefs";

// A task to cancel a Swarming task.
message CancelSwarmingTask {
  // Hostname (e.g. "chromium-swarm.appspot.com") where the task should be
  // cancelled.
  string hostname = 1;
  // Swarming task ID to cancel.
  string task_id = 2;
  // LUCI realm the task belongs to or "" if realms is disabled.
  string realm = 3;
}
